列表渲染,准备做图片和购物车

--- a/project.config.json
+++ b/project.config.json
@@ -42,5 +42,6 @@
         "ignoreUploadUnusedFiles": true
     },
     "compileType": "miniprogram",
+    "libVersion": "2.30.0",
     "condition": {}
 }
